# app/internal/handlers/subscription/delete.go
@@ -1,4 +1,4 @@
-package service_handler
+package subscription
 
 import (
 	"app/internal/apperr"
@@ -10,14 +10,14 @@ import (
 
 // Delete @Summary      Удаление подписки
 // @Description  Удаляет подписку по ID
-// @Tags         Services
+// @Tags         Subscribtions
 // @Produce      json
 // @Param        id path string true "ID подписки"
 // @Success      200 "Подписка успешно удалена"
 // @Failure      404 {object} dto.ErrDTO404 "Подписка не найдена"
 // @Failure      500 {object} dto.ErrDTO500 "Внутренняя ошибка"
-// @Router       /api/v1/services/{id} [delete]
-func (s *ServiceHandler) Delete(w http.ResponseWriter, r *http.Request) {
+// @Router       /api/v1/subscriptions/{id} [delete]
+func (s *SubscriptionHandler) Delete(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 
 	id := mux.Vars(r)["id"]
