# app/internal/handlers/subscription/replace.go
@@ -1,27 +1,31 @@
-package service_handler
+package subscription
 
 import (
-	"app/internal/apperr"
 	"app/internal/model"
 	"encoding/json"
+	"github.com/gorilla/mux"
 	"net/http"
 	"time"
-	"unicode/utf8"
 )
 
-// CreateHandler @Summary      Создание новой подписки
-// @Description  Создает подписку пользователю с начальной датой и длительностью
-// @Tags         Services
+// Replace @Summary      Полная замена подписки
+// @Description  Полностью заменяет подписку по ID. Все поля обязательны для передачи.
+//
+//	Возвращает обновлённую сущность.
+//
+// @Tags         Subscribtions
 // @Accept       json
 // @Produce      json
-// @Param        request body dto.CreateRequest true "Параметры подписки"
-// @Success      201 {object} dto.CreateResponse
-// @Failure      400 {object} dto.ErrDTO400
-// @Failure      500 {object} dto.ErrDTO500
-// @Router       /api/v1/services [post]
-func (s *ServiceHandler) CreateHandler(w http.ResponseWriter, r *http.Request) {
+// @Param        id   path      string           true  "ID услуги"
+// @Param        body body      dto.CreateRequest true  "Полные данные новой подписки"
+// @Success      200  {object}  dto.CreateResponse
+// @Failure      400  {object}  dto.ErrDTO400
+// @Failure      500  {object}  dto.ErrDTO500
+// @Router       /subscriptions/{id} [put]
+func (s *SubscriptionHandler) Replace(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 
+	id := mux.Vars(r)["id"]
 	req := struct {
 		Name      string `json:"service_name"`
 		Price     int    `json:"price"`
@@ -31,8 +35,9 @@ func (s *ServiceHandler) CreateHandler(w http.ResponseWriter, r *http.Request) {
 	}{}
 
 	err := json.NewDecoder(r.Body).Decode(&req)
+
 	if err != nil {
-		s.logger.Println("Error in decoding request body", err)
+		s.logger.Println("Error decoding request body", err)
 		w.WriteHeader(http.StatusBadRequest)
 		json.NewEncoder(w).Encode(ErrDTO{
 			Message: "invalid JSON",
@@ -42,6 +47,7 @@ func (s *ServiceHandler) CreateHandler(w http.ResponseWriter, r *http.Request) {
 	}
 
 	err = s.validateCreate(req.Name, req.Price, req.UserID, req.StartDate, req.Duration)
+
 	if err != nil {
 		s.logger.Println("Error in validating request body", err)
 		w.WriteHeader(http.StatusBadRequest)
@@ -60,9 +66,10 @@ func (s *ServiceHandler) CreateHandler(w http.ResponseWriter, r *http.Request) {
 		Duration:  req.Duration,
 	}
 
-	res, err := s.usecase.Create(modelReq)
+	res, err := s.usecase.Replace(id, modelReq)
+
 	if err != nil {
-		s.logger.Println("Error in creating request", err)
+		s.logger.Println("Error updating request", err)
 		w.WriteHeader(http.StatusInternalServerError)
 		json.NewEncoder(w).Encode(ErrDTO{
 			Message: "Internal Server Error",
@@ -70,7 +77,6 @@ func (s *ServiceHandler) CreateHandler(w http.ResponseWriter, r *http.Request) {
 		})
 		return
 	}
-
 	resp := struct {
 		ID        string    `json:"id"`
 		Name      string    `json:"service_name"`
@@ -81,33 +87,6 @@ func (s *ServiceHandler) CreateHandler(w http.ResponseWriter, r *http.Request) {
 		CreatedAt time.Time `json:"created_at"`
 	}{res.ID, res.Name, res.Price, res.UserID, res.StartDate, res.EndDate, res.CreatedAt}
 
-	w.WriteHeader(http.StatusCreated)
+	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(resp)
-
-}
-
-func (s *ServiceHandler) validateCreate(name string, price int, userID string, startDate string, duration int) error {
-	if utf8.RuneCountInString(name) > 50 {
-		return apperr.ErrNameTooLong
-	}
-
-	if name == "" {
-		return apperr.ErrNameIsRequired
-	}
-	if price <= 0 {
-		return apperr.ErrInvalidPrice
-	}
-
-	if userID == "" {
-		return apperr.ErrUserIsRequired
-	}
-
-	if startDate == "" {
-		return apperr.ErrDataIsRequired
-	}
-
-	if duration <= 0 {
-		return apperr.ErrInvalidDuration
-	}
-	return nil
 }
