# app/internal/router/router.go
@@ -1,22 +1,22 @@
 package router
 
 import (
-	"app/internal/handlers/service_handler"
+	"app/internal/handlers/subscription"
 	"github.com/gorilla/mux"
 	"net/http"
 )
 
-func NewRouter(serviceHandler *service_handler.ServiceHandler) *mux.Router {
+func NewRouter(serviceSubscriptions *subscription.SubscriptionHandler) *mux.Router {
 	r := mux.NewRouter()
 	api := r.PathPrefix("/api/v1").Subrouter()
 
-	api.HandleFunc("/services", serviceHandler.CreateHandler).Methods(http.MethodPost)
-	api.HandleFunc("/services/{id}", serviceHandler.UpdateHandler).Methods(http.MethodPatch)
-	api.HandleFunc("/services/{id}", serviceHandler.Replace).Methods(http.MethodPut)
-	api.HandleFunc("/services/total", serviceHandler.TotalPrice).Methods(http.MethodPost)
-	api.HandleFunc("/services", serviceHandler.GetAll).Methods(http.MethodGet)
-	api.HandleFunc("/services/{id}", serviceHandler.GetByID).Methods(http.MethodGet)
-	api.HandleFunc("/services/{id}", serviceHandler.Delete).Methods(http.MethodDelete)
+	api.HandleFunc("/subscriptions", serviceSubscriptions.CreateHandler).Methods(http.MethodPost)
+	api.HandleFunc("/subscriptions/{id}", serviceSubscriptions.UpdateHandler).Methods(http.MethodPatch)
+	api.HandleFunc("/subscriptions/{id}", serviceSubscriptions.Replace).Methods(http.MethodPut)
+	api.HandleFunc("/subscriptions/total", serviceSubscriptions.TotalPrice).Methods(http.MethodPost)
+	api.HandleFunc("/subscriptions", serviceSubscriptions.GetAll).Methods(http.MethodGet)
+	api.HandleFunc("/subscriptions/{id}", serviceSubscriptions.GetByID).Methods(http.MethodGet)
+	api.HandleFunc("/subscriptions/{id}", serviceSubscriptions.Delete).Methods(http.MethodDelete)
 
 	return r
 }
